--- a/BackEnd/TacoHub/src/main/resources/application.yml
+++ b/BackEnd/TacoHub/src/main/resources/application.yml
@@ -35,24 +35,24 @@ spring:
       max-file-size: 300MB
       max-request-size: 300MB
 
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: usk883135@gmail.com #?? ??
-    password: vwwvejgrqsalzcym #? ????
-    protocol : smtp #??? ???
-    properties:
-      mail:
-        protocol : smtp #??? ???
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
-          connectiontimeout: 20000
-          timeout: 20000
-          writetimeout: 20000
-    auth-code-expiration: 900000 # 15?
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: usk883135@gmail.com #?? ??
+#    password: vwwvejgrqsalzcym #? ????
+#    protocol : smtp #??? ???
+#    properties:
+#      mail:
+#        protocol : smtp #??? ???
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
+#            required: true
+#          connectiontimeout: 20000
+#          timeout: 20000
+#          writetimeout: 20000
+#    auth-code-expiration: 900000 # 15?
 
 ---
 
