--- a/BackEnd/TacoHub/src/main/resources/application.yml
+++ b/BackEnd/TacoHub/src/main/resources/application.yml
@@ -117,3 +117,25 @@ spring:
 #    mongodb :
 #      uri : mongodb+srv://springboot_user:hi882735@springboot.jbtz1.mongodb.net/?retryWrites=true&w=majority&appName=springBoot
 #      database : springBootDocuments # db ??
+
+
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  # test inmemory db
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto : create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
