--- a/BackEnd/TacoHub/src/main/resources/application.yml
+++ b/BackEnd/TacoHub/src/main/resources/application.yml
@@ -7,22 +7,22 @@ cloud:
     region:
         static: ap-northeast-2
     credentials:
-        access-key: #
-        secret-key: #
+        access-key: # TODO: 
+        secret-key: # TODO : 
 
     stack:
         auto: false
 
     s3:
-      bucket: #
+      bucket: # TODO :
 
 jwt:
   access:
-    secret: #
+    secret: # TODO :
     expiration: 36000000
 
   refresh:
-    secret: #
+    secret: # TODO : 
     expiration: 204800000
 
 spring:
@@ -139,3 +139,15 @@ spring:
       ddl-auto : create-drop
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+
+  redis:
+    host : localhost
+    port: 6379 #6379
+    ssl: false
+    password :
+
+  #mongoDb ?? ??
+  data :
+    mongodb :
+      uri : localhost # TODO : 
+      database :  localhost # db name
