--- a/BackEnd/TacoHub/.gitignore
+++ b/BackEnd/TacoHub/.gitignore
@@ -35,3 +35,14 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Environment Variables ###
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+### Logs ###
+logs/
+*.log
