--- a/BackEnd/TacoHub/build.gradle
+++ b/BackEnd/TacoHub/build.gradle
@@ -25,8 +25,25 @@ repositories {
 
 dependencies {
 
+	//aws dependency
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// CloudWatch 로깅 의존성
+	implementation 'ca.pjer:logback-awslogs-appender:1.6.0'
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+	implementation 'com.amazonaws:aws-java-sdk-logs:1.12.565'
+
 	//environment variables dependency
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+
+	//AOP dependency
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	//JSON dependency
+	implementation 'org.springframework.boot:spring-boot-starter-json'
+
+	//rabbitmq dependency
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 
 	//jpa dependency
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
