Add backend test workflows and WebSocket server
- CI/CD 시도 위한 github action 스크립트들 추가, 각각 백엔드 서버 기동/단위 및 종합 테스트 실행 담당

- 백엔드 서버 기동 시 발생하던 각종 에러들 수정(Service 상호 참조에 의한 Bean 무한 대기 - Lazy 채용으로 해결, Aop 등에 사용되는 Class의 Interface 주입 원칙 위반 및 순환 참조 - Lazy 채용 및 Interface 주입 원칙 지키게 수정)

- WebSocket 서버 개발 위한 기초 프로젝트 구조 제작

--- a/BackEnd/TacoHub/compose.yaml
+++ b/BackEnd/TacoHub/compose.yaml
@@ -67,29 +67,29 @@ services:
       timeout: 20s
       retries: 10
 
-  # LocalStack (AWS 서비스 에뮬레이션)
-  localstack:
-    image: 'localstack/localstack:latest'
-    container_name: tacohub-localstack
-    environment:
-      - 'SERVICES=s3,logs,ssm'  # S3, CloudWatch Logs, Parameter Store 활성화
-      - 'DEBUG=1'
-      - 'DATA_DIR=/var/lib/localstack'  # 경로 변경
-      - 'PERSISTENCE=1'  # 데이터 영속성
-      - 'AWS_DEFAULT_REGION=ap-northeast-2'
-      - 'AWS_ACCESS_KEY_ID=test'
-      - 'AWS_SECRET_ACCESS_KEY=test'
-    ports:
-      - '4566:4566'  # LocalStack main port
-      - '4571:4571'  # LocalStack legacy port (S3)
-    volumes:
-      - localstack_data:/var/lib/localstack  # 경로 변경
-      #- /var/run/docker.sock:/var/run/docker.sock
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
-      timeout: 20s
-      retries: 10
-      start_period: 30s
+  # # LocalStack (AWS 서비스 에뮬레이션)
+  # localstack:
+  #   image: 'localstack/localstack:latest'
+  #   container_name: tacohub-localstack
+  #   environment:
+  #     - 'SERVICES=s3,logs,ssm'  # S3, CloudWatch Logs, Parameter Store 활성화
+  #     - 'DEBUG=1'
+  #     - 'DATA_DIR=/var/lib/localstack'  # 경로 변경
+  #     - 'PERSISTENCE=1'  # 데이터 영속성
+  #     - 'AWS_DEFAULT_REGION=ap-northeast-2'
+  #     - 'AWS_ACCESS_KEY_ID=test'
+  #     - 'AWS_SECRET_ACCESS_KEY=test'
+  #   ports:
+  #     - '4566:4566'  # LocalStack main port
+  #     - '4571:4571'  # LocalStack legacy port (S3)
+  #   volumes:
+  #     - localstack_data:/var/lib/localstack  # 경로 변경
+  #     #- /var/run/docker.sock:/var/run/docker.sock
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
+  #     timeout: 20s
+  #     retries: 10
+  #     start_period: 30s
 
   # TacoHub Application (선택사항 - 개발시 IDE에서 실행 권장)
   # tacohub-app:
@@ -118,8 +118,8 @@ volumes:
     driver: local
   rabbitmq_data:
     driver: local
-  localstack_data:
-    driver: local
+  # localstack_data:
+  #   driver: local
 
 # 네트워크 정의 (컨테이너간 통신)
 networks:
