Add RabbitMQ integration and audit logging to WebSocket server
- WebSocket Server 개발 개시, 전반적으로 이용될 Logging 시스템 구축, Api server와 동일하게 cloudwatch/s3 분리형 audit/application log 정책 채택

- RabbitMQ 이용 위한 Config 및 기초 연결 설정, 당장 필요한 Message Type들 구현. 우선 서로 다른 프로젝트에서 따로따로 동기화 시키는 것으로 방향성.

- 이후에는, RabbitMQ Consumer/Producer 구현, Jwt Token 이용한 인증 및 인가 정책 구현

--- a/.github/workflows/backend-startup-test.yml
+++ b/.github/workflows/backend-startup-test.yml
@@ -6,7 +6,7 @@ name: Backend API Server Startup Test
 on:
   # 코드가 main 또는 dev 브랜치에 푸시될 때 실행
   push:
-    branches: [ main, dev ]
+    branches: [ dev ]
     # 백엔드 코드가 변경되었을 때만 실행 (효율성을 위해)
     paths:
       - 'BackEnd/**'
@@ -109,9 +109,7 @@ jobs:
         ./gradlew build -x test
         
         echo "✅ 빌드 완료!"
-      env:
-        # Java 21의 Virtual Threads 활성화 (성능 향상)
-        JAVA_TOOL_OPTIONS: "--enable-preview"
+
 
     # 7단계: Spring Boot 서버 기동 테스트
     - name: 🚀 Spring Boot 서버 기동 테스트
