--- a/WebSocket/package.json
+++ b/WebSocket/package.json
@@ -11,22 +11,31 @@
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["websocket", "socket.io", "typescript", "collaboration"],
+  "keywords": [
+    "websocket",
+    "socket.io",
+    "typescript",
+    "collaboration"
+  ],
   "author": "TacoHub Team",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.849.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/client-ssm": "^3.849.0",
     "amqplib": "^0.10.8",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-cloudwatch": "^6.3.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
